Fix clearable-input overflow in search (fix #837)

--- a/client/css/sections/settings/alerts.css
+++ b/client/css/sections/settings/alerts.css
@@ -1,7 +1,3 @@
-.clearable-input > input {
-    width: auto;
-}
-
 /* Alerts */
 table.alerts-and-reports tfoot {
     display: table-header-group;
@@ -15,7 +11,6 @@ table.alerts-and-reports td.condition {
 
 table.alerts-and-reports td.amount {
     width: 40%;
-    text-align: right;
 }
 
 table.alerts-and-reports td.frequency {
@@ -27,14 +22,21 @@ table.alerts-and-reports td.actions {
     width: 8%;
 }
 
+table.alerts-and-reports .input-group-money {
+    max-width: 180px;
+    vertical-align: inherit;
+    margin-left: 1em;
+}
+
+@media screen and (max-width: 768px) {
+    table.alerts-and-reports .input-group-money > input {
+        width: 50px;
+    }
+}
+
 @media screen and (min-width: 992px) {
     table.alerts-and-reports td.frequency select {
         width: 270px;
-    }
-
-    .input-group-money {
-        width: 180px;
-        margin-left: 1em;
     }
 }
 
